--- a/planck-man/planck.1
+++ b/planck-man/planck.1
@@ -22,9 +22,8 @@ The
 .B plk
 script is a wrapper around
 .B planck
-that delegates to 
-.B clojure(1)
-to provide support for dependency management via
+that delegates to clojure(1) to provide support for dependency
+management via
 .B dep-opts
 processing.
 
@@ -33,8 +32,7 @@ The
 script ultimately constructs and invokes a command-line of the form:
 
 .B planck
---classpath classpath [\fBinit-opt*\fR]
-[\fBmain-opt\fR] [\fBarg*\fR]
+--classpath classpath [\fBinit-opts...\fR] [\fBmain-opt\fR] [\fBargs...\fR]
 
 .SH EXAMPLES
 
@@ -61,9 +59,9 @@ indicates that a REPL should be launched.
 
 The
 .B planck
-binary supports the same except for
+binary supports the same except that
 .B dep-opts
-.
+is not supported.
 
 .SS dep-opts
 
@@ -123,9 +121,8 @@ Print important path info to console
 .BI \-Sdescribe
 Print environment and command parsing info as data
 
-Additionally, for compatibility with 
-.B clojure
-, 
+.P
+Additionally, for compatibility with clojure(1),
 .B -Jopt
 and 
 .B -Oalias...
