--- a/planck-man/planck.1
+++ b/planck-man/planck.1
@@ -132,7 +132,7 @@ are accepted but ignored.
 .SS init-opts
 
 .TP
-.BR \-\-compile-opts\  \fIedn\fR
+.BR \-co ", " \-\-compile-opts\  \fIedn\fR
 Options to configure compilation, can be an EDN
 string or colon-separated list of EDN files /
 classpath resources. Options will be merged left
