Support --compile-opts and closure-defines
Fixes #774 
Fixes #773

--- a/planck-man/planck.1
+++ b/planck-man/planck.1
@@ -132,6 +132,13 @@ are accepted but ignored.
 .SS init-opts
 
 .TP
+.BR \-co ", " \-\-compile-opts\  \fIedn\fR
+Options to configure compilation, can be an EDN
+string or colon-separated list of EDN files /
+classpath resources. Options will be merged left
+to right.
+
+.TP
 .BR \-i ", " \-\-init\  \fIpath\fR
 Load a file or resource
 
