Long form needed with plk for optimizations / checked arrays
Fixes #750

--- a/planck-man/planck.1
+++ b/planck-man/planck.1
@@ -206,12 +206,16 @@ invokes via f(a0,a1...)
 .TP
 .BR \-O ", " \-\-optimizations\  \fIlevel\fR
 Closure compiler \fIlevel\fR applied to source loaded
-from namespaces: none, whitespace, or simple
+from namespaces: none, whitespace, or simple. If using the
+.B plk
+script, the long form of this option must be used.
 
 .TP
 .BR \-A ", " \-\-checked-arrays\  \fIx\fR
 Enables checked arrays where \fIx\fR is either warn
-or error
+or error. If using the
+.B plk
+script, the long form of this option must be used.
 
 .TP
 .BR \-a ", " \-\-elide-asserts\ 
