Eliminate reference to user guide

--- a/planck-man/planck.1
+++ b/planck-man/planck.1
@@ -39,7 +39,7 @@ script ultimately constructs and invokes a command-line of the form:
 You can launch a ClojureScript REPL by running
 .BR plk .
 
-See the Planck User Guide below for more complex usage.
+See the Planck online documentation for more complex usage.
 
 .SH OPTIONS
 
